feat: agregar historial de paciente y ajustes de citas/facturas