@@ -11,6 +11,7 @@ import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
+import jakarta.annotation.PostConstruct;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
@@ -28,11 +29,62 @@ public class EmailService {
 
     private final JavaMailSender mailSender;
 
-    @Value("${spring.mail.username}")
+    @Value("${spring.mail.username:}")
     private String fromEmail;
 
     @Value("${app.nombre:Clínica Veterinaria}")
     private String nombreClinica;
+
+    @Value("${app.email.from:${spring.mail.username}}")
+    private String emailFrom;
+
+    @Value("${app.frontend.url:http://localhost:3000}")
+    private String frontendUrl;
+
+    @Value("${app.contacto.telefono:}")
+    private String telefonoClinica;
+
+    @Value("${app.contacto.direccion:}")
+    private String direccionClinica;
+
+    @Value("${app.contacto.email:${spring.mail.username}}")
+    private String emailContacto;
+
+    @PostConstruct
+    public void verificarConfiguracion() {
+        log.info("=== Configuración de Email ===");
+        log.info("Email remitente (app.email.from): {}", emailFrom != null && !emailFrom.isEmpty() ? emailFrom : "NO CONFIGURADO");
+        log.info("Frontend URL: {}", frontendUrl);
+        log.info("Nombre clínica: {}", nombreClinica);
+        log.info("Teléfono contacto: {}", telefonoClinica != null && !telefonoClinica.isEmpty() ? telefonoClinica : "NO CONFIGURADO");
+        log.info("Dirección contacto: {}", direccionClinica != null && !direccionClinica.isEmpty() ? direccionClinica : "NO CONFIGURADO");
+        log.info("Email contacto: {}", emailContacto != null && !emailContacto.isEmpty() ? emailContacto : "NO CONFIGURADO");
+        
+        // Verificar configuración de Spring Mail
+        try {
+            // Intentar obtener las propiedades del mailSender
+            log.info("Configuración SMTP - Host: {}", System.getProperty("spring.mail.host") != null ? 
+                    System.getProperty("spring.mail.host") : "Desde application.properties");
+            log.info("Configuración SMTP - Port: {}", System.getProperty("spring.mail.port") != null ? 
+                    System.getProperty("spring.mail.port") : "Desde application.properties");
+            log.info("Configuración SMTP - Username configurado: {}", 
+                    System.getenv("EMAIL_USERNAME") != null ? "SÍ (desde variable de entorno)" : 
+                    (System.getProperty("spring.mail.username") != null ? "SÍ (desde property)" : "NO"));
+            log.info("Configuración SMTP - Password configurado: {}", 
+                    System.getenv("EMAIL_PASSWORD") != null ? "SÍ (desde variable de entorno)" : 
+                    (System.getProperty("spring.mail.password") != null ? "SÍ (desde property)" : "NO"));
+        } catch (Exception e) {
+            log.warn("No se pudo verificar configuración SMTP: {}", e.getMessage());
+        }
+        
+        if (emailFrom == null || emailFrom.trim().isEmpty()) {
+            log.error("⚠️ ERROR: Email remitente no está configurado. Los emails NO se enviarán.");
+            log.error("⚠️ Configura EMAIL_FROM o spring.mail.username en las variables de entorno");
+            log.error("⚠️ Verifica que el archivo .env existe y tiene las variables configuradas");
+        } else {
+            log.info("✓ Configuración de email remitente OK");
+        }
+    }
 
     /**
      * Envía un email de forma asíncrona
@@ -40,19 +92,57 @@ public class EmailService {
     @Async
     public void enviarEmail(String destinatario, String asunto, String contenidoHtml) {
         try {
+            // Validar que las credenciales estén configuradas
+            if (emailFrom == null || emailFrom.trim().isEmpty()) {
+                log.error("❌ ERROR: Email remitente (app.email.from) no está configurado. Verifica la variable EMAIL_FROM o spring.mail.username");
+                return;
+            }
+            
+            log.info("Enviando email - De: {}, Para: {}, Asunto: {}", emailFrom, destinatario, asunto);
+            
             MimeMessage message = mailSender.createMimeMessage();
             MimeMessageHelper helper = new MimeMessageHelper(message, true, "UTF-8");
 
-            helper.setFrom(fromEmail);
+            helper.setFrom(emailFrom);
             helper.setTo(destinatario);
             helper.setSubject(asunto);
             helper.setText(contenidoHtml, true);
 
             mailSender.send(message);
-            log.info("Email enviado exitosamente a: {}", destinatario);
+            log.info("✓ Email enviado exitosamente a: {} (Asunto: {})", destinatario, asunto);
 
         } catch (MessagingException e) {
-            log.error("Error al enviar email a {}: {}", destinatario, e.getMessage());
+            log.error("❌ Error al enviar email a {}: {}", destinatario, e.getMessage(), e);
+            log.error("Detalles del error - Tipo: {}, Causa: {}", 
+                    e.getClass().getSimpleName(), 
+                    e.getCause() != null ? e.getCause().getMessage() : "N/A");
+            
+            // Errores comunes de Gmail
+            String errorMsg = e.getMessage() != null ? e.getMessage().toLowerCase() : "";
+            if (errorMsg.contains("authentication failed") || errorMsg.contains("535") || errorMsg.contains("534")) {
+                log.error("🔐 PROBLEMA DE AUTENTICACIÓN:");
+                log.error("   - Verifica que EMAIL_USERNAME y EMAIL_PASSWORD estén configurados");
+                log.error("   - Para Gmail, usa una 'Contraseña de aplicación' (no tu contraseña normal)");
+                log.error("   - Genera una nueva en: https://myaccount.google.com/apppasswords");
+                log.error("   - Verifica que la verificación en dos pasos esté activada");
+            } else if (errorMsg.contains("connection") || errorMsg.contains("timeout") || errorMsg.contains("could not connect")) {
+                log.error("🌐 PROBLEMA DE CONEXIÓN:");
+                log.error("   - Verifica tu conexión a internet");
+                log.error("   - Verifica que el puerto 587 no esté bloqueado por firewall");
+                log.error("   - Gmail puede tener límites de envío (500 emails/día para cuentas gratuitas)");
+            } else if (errorMsg.contains("quota") || errorMsg.contains("limit") || errorMsg.contains("550")) {
+                log.error("📊 LÍMITE DE GMAIL ALCANZADO:");
+                log.error("   - Gmail tiene límites de envío (500 emails/día para cuentas gratuitas)");
+                log.error("   - Espera 24 horas o considera usar una cuenta de Google Workspace");
+            } else if (errorMsg.contains("550-5.7.1") || errorMsg.contains("relay access denied")) {
+                log.error("🚫 ACCESO DENEGADO:");
+                log.error("   - Gmail puede estar bloqueando el envío desde aplicaciones");
+                log.error("   - Verifica que 'Permitir aplicaciones menos seguras' esté deshabilitado");
+                log.error("   - Usa una 'Contraseña de aplicación' en su lugar");
+            }
+        } catch (Exception e) {
+            log.error("❌ Error inesperado al enviar email a {}: {}", destinatario, e.getMessage(), e);
+            log.error("Stack trace completo:", e);
         }
     }
 
@@ -84,11 +174,13 @@ public class EmailService {
      * Notificación de factura generada
      */
     public void notificarFacturaGenerada(String emailCliente, String nombreCliente,
-                                          String numeroFactura, Double montoTotal,
+                                          String numeroFactura, LocalDate fechaEmision,
+                                          Double subtotal, Double totalDescuentos,
+                                          Double totalImpuestos, Double montoTotal,
                                           String detalles) {
         String asunto = "Factura #" + numeroFactura + " - " + nombreClinica;
-        String contenido = crearTemplateFactura(nombreCliente, numeroFactura,
-                montoTotal, detalles);
+        String contenido = crearTemplateFactura(nombreCliente, numeroFactura, fechaEmision,
+                subtotal, totalDescuentos, totalImpuestos, montoTotal, detalles);
         enviarEmail(emailCliente, asunto, contenido);
     }
 
@@ -135,7 +227,7 @@ public class EmailService {
         DateTimeFormatter formatoFecha = DateTimeFormatter.ofPattern("dd/MM/yyyy");
         DateTimeFormatter formatoHora = DateTimeFormatter.ofPattern("HH:mm");
 
-        String linkConfirmacion = "http://localhost:3000/confirmar-cita?token=" + token;
+        String linkConfirmacion = frontendUrl + "/confirmar-cita?token=" + token;
 
         return """
             <!DOCTYPE html>
@@ -188,13 +280,15 @@ public class EmailService {
                     <div class="footer">
                         <p>Este es un mensaje automático, por favor no responder.</p>
                         <p>%s - © %d</p>
+                        %s
                     </div>
                 </div>
             </body>
             </html>
             """.formatted(nombreClinica, nombreCliente, nombrePaciente,
                 fecha.format(formatoFecha), hora.format(formatoHora), servicio,
-                linkConfirmacion, nombreClinica, LocalDate.now().getYear());
+                linkConfirmacion, nombreClinica, LocalDate.now().getYear(),
+                crearFooterContacto());
     }
 
     private String crearTemplateVeterinarioCitaConfirmada(String nombreVeterinario, String nombreCliente,
@@ -242,16 +336,20 @@ public class EmailService {
                     <div class="footer">
                         <p>Este es un mensaje automático, por favor no responder.</p>
                         <p>%s - © %d</p>
+                        %s
                     </div>
                 </div>
             </body>
             </html>
             """.formatted(nombreClinica, nombreVeterinario, nombreCliente, nombrePaciente,
                 fecha.format(formatoFecha), hora.format(formatoHora),
-                nombreClinica, LocalDate.now().getYear());
+                nombreClinica, LocalDate.now().getYear(),
+                crearFooterContacto());
     }
 
     private String crearTemplateFactura(String nombreCliente, String numeroFactura,
+                                         LocalDate fechaEmision, Double subtotal,
+                                         Double totalDescuentos, Double totalImpuestos,
                                          Double montoTotal, String detalles) {
         return """
             <!DOCTYPE html>
@@ -260,12 +358,19 @@ public class EmailService {
                 <meta charset="UTF-8">
                 <style>
                     body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
-                    .container { max-width: 600px; margin: 0 auto; padding: 20px; }
+                    .container { max-width: 700px; margin: 0 auto; padding: 20px; }
                     .header { background: #2196F3; color: white; padding: 20px; text-align: center; }
                     .content { background: #f9f9f9; padding: 20px; margin: 20px 0; }
-                    .info-box { background: white; padding: 15px; margin: 10px 0; border-left: 4px solid #2196F3; }
-                    .total { font-size: 24px; color: #2196F3; font-weight: bold; }
+                    .info-box { background: white; padding: 20px; margin: 10px 0; border-left: 4px solid #2196F3; }
+                    .total-box { background: #e3f2fd; padding: 15px; margin: 15px 0; border-radius: 4px; }
+                    .total { font-size: 28px; color: #1976d2; font-weight: bold; text-align: right; }
+                    .subtotal-line { text-align: right; padding: 5px 0; }
                     .footer { text-align: center; color: #666; font-size: 12px; padding: 20px; }
+                    table { width: 100%%; border-collapse: collapse; margin: 15px 0; }
+                    th { background-color: #f5f5f5; padding: 10px; text-align: left; border-bottom: 2px solid #ddd; }
+                    td { padding: 10px; border-bottom: 1px solid #eee; }
+                    .text-right { text-align: right; }
+                    .text-bold { font-weight: bold; }
                 </style>
             </head>
             <body>
@@ -279,28 +384,58 @@ public class EmailService {
                         <p>Se ha generado su factura con los siguientes detalles:</p>
                         
                         <div class="info-box">
-                            <strong>Número de Factura:</strong> %s<br>
-                            <strong>Fecha:</strong> %s<br>
-                            <br>
-                            <strong>Detalles:</strong><br>
-                            %s<br>
-                            <br>
-                            <p class="total">Total: S/ %.2f</p>
+                            <div style="margin-bottom: 15px;">
+                                <strong>Número de Factura:</strong> %s<br>
+                                <strong>Fecha de Emisión:</strong> %s<br>
+                            </div>
+                            
+                            <div style="margin: 20px 0;">
+                                <strong>Detalles de la Factura:</strong>
+                                %s
+                            </div>
+                            
+                            <div class="total-box">
+                                <div class="subtotal-line">
+                                    <strong>Subtotal:</strong> S/ %.2f
+                                </div>
+                                %s
+                                %s
+                                <div class="total" style="margin-top: 10px; padding-top: 10px; border-top: 2px solid #1976d2;">
+                                    Total: S/ %.2f
+                                </div>
+                            </div>
                         </div>
                         
                         <p>Puede realizar el pago en nuestra clínica o mediante transferencia bancaria.</p>
                         <p>Gracias por confiar en nosotros.</p>
+                        %s
                     </div>
                     <div class="footer">
                         <p>Este es un mensaje automático, por favor no responder.</p>
                         <p>%s - © %d</p>
+                        %s
                     </div>
                 </div>
             </body>
             </html>
-            """.formatted(nombreClinica, nombreCliente, numeroFactura,
-                LocalDate.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy")),
-                detalles, montoTotal, nombreClinica, LocalDate.now().getYear());
+            """.formatted(
+                nombreClinica, 
+                nombreCliente, 
+                numeroFactura,
+                fechaEmision != null ? fechaEmision.format(DateTimeFormatter.ofPattern("dd/MM/yyyy")) : 
+                    LocalDate.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy")),
+                detalles,
+                subtotal != null ? subtotal : 0.0,
+                totalDescuentos != null && totalDescuentos > 0 ? 
+                    String.format("<div class=\"subtotal-line\" style=\"color: #d32f2f;\"><strong>Descuentos:</strong> -S/ %.2f</div>", totalDescuentos) : "",
+                totalImpuestos != null && totalImpuestos > 0 ? 
+                    String.format("<div class=\"subtotal-line\"><strong>Impuestos:</strong> S/ %.2f</div>", totalImpuestos) : "",
+                montoTotal != null ? montoTotal : 0.0,
+                crearInfoContacto(),
+                nombreClinica, 
+                LocalDate.now().getYear(),
+                crearFooterContacto()
+            );
     }
 
     private String crearTemplateConsulta(String nombreCliente, String nombrePaciente,
@@ -344,13 +479,15 @@ public class EmailService {
                     <div class="footer">
                         <p>Este es un mensaje automático, por favor no responder.</p>
                         <p>%s - © %d</p>
+                        %s
                     </div>
                 </div>
             </body>
             </html>
             """.formatted(nombreClinica, nombreCliente, nombrePaciente,
                 fecha.format(DateTimeFormatter.ofPattern("dd/MM/yyyy")),
-                diagnostico, tratamiento, nombreClinica, LocalDate.now().getYear());
+                diagnostico, tratamiento, nombreClinica, LocalDate.now().getYear(),
+                crearFooterContacto());
     }
 
     private String crearTemplateRecordatorio(String nombreCliente, String nombrePaciente,
@@ -395,6 +532,7 @@ public class EmailService {
                     <div class="footer">
                         <p>Este es un mensaje automático, por favor no responder.</p>
                         <p>%s - © %d</p>
+                        %s
                     </div>
                 </div>
             </body>
@@ -402,7 +540,8 @@ public class EmailService {
             """.formatted(nombreClinica, nombreCliente, nombrePaciente,
                 fecha.format(DateTimeFormatter.ofPattern("dd/MM/yyyy")),
                 hora.format(DateTimeFormatter.ofPattern("HH:mm")),
-                servicio, nombreClinica, LocalDate.now().getYear());
+                servicio, nombreClinica, LocalDate.now().getYear(),
+                crearFooterContacto());
     }
 
     private String crearTemplateCitaCancelada(String nombreCliente, String nombrePaciente,
@@ -442,12 +581,62 @@ public class EmailService {
                     <div class="footer">
                         <p>Este es un mensaje automático, por favor no responder.</p>
                         <p>%s - © %d</p>
+                        %s
                     </div>
                 </div>
             </body>
             </html>
             """.formatted(nombreClinica, nombreCliente, nombrePaciente,
                 fecha.format(DateTimeFormatter.ofPattern("dd/MM/yyyy")),
-                motivo, nombreClinica, LocalDate.now().getYear());
+                motivo, nombreClinica, LocalDate.now().getYear(),
+                crearFooterContacto());
+    }
+
+    /**
+     * Crea el bloque de información de contacto para los emails
+     */
+    private String crearInfoContacto() {
+        StringBuilder info = new StringBuilder();
+        if (telefonoClinica != null && !telefonoClinica.trim().isEmpty()) {
+            info.append("<p><strong>Teléfono:</strong> ").append(telefonoClinica).append("</p>");
+        }
+        if (direccionClinica != null && !direccionClinica.trim().isEmpty()) {
+            info.append("<p><strong>Dirección:</strong> ").append(direccionClinica).append("</p>");
+        }
+        if (emailContacto != null && !emailContacto.trim().isEmpty()) {
+            info.append("<p><strong>Email:</strong> ").append(emailContacto).append("</p>");
+        }
+        return info.toString();
+    }
+
+    /**
+     * Crea el footer con información de contacto
+     */
+    private String crearFooterContacto() {
+        StringBuilder footer = new StringBuilder();
+        boolean tieneInfo = (telefonoClinica != null && !telefonoClinica.trim().isEmpty()) ||
+                           (direccionClinica != null && !direccionClinica.trim().isEmpty()) ||
+                           (emailContacto != null && !emailContacto.trim().isEmpty());
+        
+        if (tieneInfo) {
+            footer.append("<p>");
+            boolean primero = true;
+            if (telefonoClinica != null && !telefonoClinica.trim().isEmpty()) {
+                if (!primero) footer.append(" | ");
+                footer.append("Tel: ").append(telefonoClinica);
+                primero = false;
+            }
+            if (direccionClinica != null && !direccionClinica.trim().isEmpty()) {
+                if (!primero) footer.append(" | ");
+                footer.append("Dir: ").append(direccionClinica);
+                primero = false;
+            }
+            if (emailContacto != null && !emailContacto.trim().isEmpty()) {
+                if (!primero) footer.append(" | ");
+                footer.append("Email: ").append(emailContacto);
+            }
+            footer.append("</p>");
+        }
+        return footer.toString();
     }
 }
